--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,51 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/LWJGL-macos"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/LWJGL-windows"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/GSON"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/joml-1.9.2.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/joml-1.9.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/joml-1.9.2-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-glfw.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-glfw-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-glfw-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-glfw-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-glfw-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-glfw-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-jemalloc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-jemalloc-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-jemalloc-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-jemalloc-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-jemalloc-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-jemalloc-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-nuklear.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-nuklear-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-nuklear-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-nuklear-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-nuklear-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-nuklear-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-openal.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-openal-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-openal-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-openal-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-openal-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-openal-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-opengl.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-opengl-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-opengl-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-opengl-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-opengl-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-opengl-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-stb.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-stb-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-stb-natives-linux.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-stb-natives-macos.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-stb-natives-windows.jar"/>
+	<classpathentry kind="lib" path="D:/Zucchini2/c3/lwjgl-3.1.1/lwjgl-stb-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
